# spt2d

./: .gitignore  CMakeLists.txt  LICENSE  Spt3D.h  index.html  wasm-build.ps1  wxgame-pre.js
docs/: code_review_report_v2.md  坑.md  微信小游戏文件系统API文档.md
src/: Handle.h  Main.cpp  Types.cpp  Types.h
src/core/: Audio.cpp  CallbackManager.h  Camera.cpp  Color.cpp  DebugDraw.cpp  DoubleBuffer.h  DrawList.cpp  GameWork.h  Geometry.cpp  Input.cpp  Lifecycle.cpp  Light.cpp  LinearAllocator.h  Material.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  PostEffects.cpp  Random.cpp  RenderCommand.h  RenderTarget.cpp  Shader.cpp  Signal.h  Texture.cpp  ThreadConfig.h  ThreadModel.cpp  ThreadModel.h  ThreadSafeQueue.h  TripleBuffer.h  Utility.cpp
src/glad/: glad.c  glad.h
src/gpu/: BuiltinShaders.h  GPUDevice.cpp  GPUDevice.h  ShaderLibrary.cpp  ShaderLibrary.h  TextureLoader.cpp  TextureLoader.h
src/graphics/: BlendMode.h  Canvas.cpp  Canvas.h  Color.h  Graphics.cpp  Graphics.h  Mat3.h  RenderCommandExecutor.h  Shader.cpp  Shader.h  ShaderSources.h  Texture.cpp  Texture.h
src/platform/: Platform.cpp  Platform.h
src/platform/sdl3/: Sdl3Platform.cpp
src/platform/web/: WebPlatform.cpp
src/platform/wx/: WxApi.cpp  WxApi.h  WxPlatform.cpp
src/render/: Executor.cpp  Executor.h  Pipeline.cpp  Pipeline.h
src/resource/: DrawList.cpp  DrawList.h  IResource.h  MaterialSnapshot.h  MeshData.cpp  MeshData.h  RawDataResource.cpp  RawDataResource.h  ResHandle.h  ResourceManager.cpp  ResourceManager.h  TextureResource.cpp  TextureResource.h
src/vfs/: IFileSystemProvider.h  VFS.cpp  VirtualFileSystem.cpp  VirtualFileSystem.h
src/vfs/providers/: NativeFileSystem.cpp  NativeFileSystem.h  WxFileSystem.cpp  WxFileSystem.h
